슬라이드 세트 완성. 연결작업 시작

--- a/beautyChuSpring/src/main/webapp/view/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-shopdetail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -70,7 +70,7 @@
 
 	<div id="wrap-chu" class="wrap-chu">
 
-
+ -->
 		<div id=yun-shopdetailcontainer>
 		
 <!--*****************************************************************************************-->
@@ -131,7 +131,7 @@
 				</div>
 			</div>
 		</div>
-
+<!-- 
 	</div>
 
 
@@ -151,4 +151,4 @@
 		 */
 	</script>
 </body>
-</html>
+</html> -->
