--- a/beautyChuSpring/src/main/webapp/view/yun-shoppricelist.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-shoppricelist.html
@@ -63,52 +63,57 @@
 	<div id="wrap-chu" class="wrap-chu">
  -->
 
-		<div id=yun-shopdetailcontainer>
+<div id=yun-shopdetailcontainer>
 
-			<div id=yun-shopstylelist class=yun-shopcontainerdiv>
-				<div id=yun-shopstyle1 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s1.png">
-				</div>
-				<div id=yun-shopstyle2 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s2.png">
-				</div>
-				<div id=yun-shopstyle3 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s3.jpg">
-				</div>
-				<div id=yun-shopstyle4 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s4.jpg">
-				</div>
-				<div id=yun-shopstyle5 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
-				</div>
-				<div id=yun-shopstyle6 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s6.jpg">
-				</div>
-				<div id=yun-shopstyle7 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s7.jpg">
-				</div>
-				<div id=yun-shopstyle8 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s8.jpg">
-				</div>
-				<div id=yun-shopstyle6 class=yun-shopstyle>
-					<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
-				</div>
-			</div>
-
-			<div id=yun-shoppricelist class=yun-shopcontainerdiv>
-				<div id=yun-buttondiv>
-					<img src="../images/yun-shopdetail/back-icon.png"> 
-					<img src="../images/yun-shopdetail/exit-icon.png">
-				</div>
-
-
-				<h1>Price List</h1>
-				<img src="../images/yun-shopdetail/pricelist.png" width="100%">
-
-			</div>
-
-
+	<div id=yun-shopstylelist class=yun-shopcontainerdiv>
+		<div id=yun-shopstyle1 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s1.png">
 		</div>
+		<div id=yun-shopstyle2 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s2.png">
+		</div>
+		<div id=yun-shopstyle3 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s3.jpg">
+		</div>
+		<div id=yun-shopstyle4 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s4.jpg">
+		</div>
+		<div id=yun-shopstyle5 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
+		</div>
+		<div id=yun-shopstyle6 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s6.jpg">
+		</div>
+		<div id=yun-shopstyle7 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s7.jpg">
+		</div>
+		<div id=yun-shopstyle8 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s8.jpg">
+		</div>
+		<div id=yun-shopstyle6 class=yun-shopstyle>
+			<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
+		</div>
+	</div>
+
+	<div id=yun-shoppricelist class=yun-shopcontainerdiv>
+		<div id=yun-buttondiv>
+			<img src="../images/yun-shopdetail/back-icon.png"> <img
+				src="../images/yun-shopdetail/exit-icon.png">
+		</div>
+
+
+		<h1>Price List</h1>
+
+		<div id=yun-shoppricelistbutton>
+			<button type="button" class=yun-getcouponbutton>쿠폰 받기</button>
+		</div>
+
+		<img src="../images/yun-shopdetail/pricelist.png" width="100%">
+
+	</div>
+
+
+</div>
 
 <!-- 	</div>
 
