--- a/beautyChuSpring/src/main/webapp/view/yun-styledetail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-styledetail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -70,7 +70,7 @@
 
 	<div id="wrap-chu" class="wrap-chu">
 
-
+ -->
 		<div id=yun-styledetailcontainer>
 
 			<div id=yun-stylephotolist class=yun-stylecontainerdiv>
@@ -116,16 +116,20 @@
 				</div>
 
 
+<div id=yun-stylebutton>
+<button type="button" class=yun-shopdetailbutton>샵 더보기</button>
+<button type="button" class=yun-getcouponbutton >쿠폰 받기</button>
+</div>
+
 
 				<div id=yun-stylecomment class=yun-stylecomment>
-				
 				<img class=yun-stylecomment src="../images/yun-shopdetail/comment.png"/>
 				
 				</div>
 			</div>
 
 		</div>
-
+<!-- 
 	</div>
 
 
@@ -145,4 +149,4 @@
 		 */
 	</script>
 </body>
-</html>
+</html> -->
