--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
@@ -97,8 +97,8 @@
 
 	<div id=yun-shoppricelist class=yun-shopcontainerdiv>
 		<div id=yun-buttondiv>
-			<img src="../images/yun-shopdetail/back-icon.png"> <img
-				src="../images/yun-shopdetail/exit-icon.png">
+			<img class='yun-back' src="../images/yun-shopdetail/back-icon.png">
+			<img class='yun-exit' src="../images/yun-shopdetail/exit-icon.png">
 		</div>
 
 
@@ -107,7 +107,6 @@
 		<div id=yun-shoppricelistbutton>
 			<button type="button" class=yun-getcouponbutton>쿠폰 받기</button>
 		</div>
-
 		<img src="../images/yun-shopdetail/pricelist.png" width="100%">
 
 	</div>
