--- a/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-styledetail.html
@@ -71,6 +71,7 @@
 	<div id="wrap-chu" class="wrap-chu">
 
  -->
+ 
 		<div id=yun-styledetailcontainer>
 
 			<div id=yun-stylephotolist class=yun-stylecontainerdiv>
@@ -98,8 +99,8 @@
 
 			<div id=yun-stylecontent class=yun-stylecontainerdiv>
 				<div id=yun-buttondiv>
-					<img src="../images/yun-shopdetail/back-icon.png"> <img
-						src="../images/yun-shopdetail/exit-icon.png">
+					<img class=yun-back src="../images/yun-shopdetail/back-icon.png"> 
+					<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
 				</div>
 
 				<div id=yun-styletitle>
@@ -117,7 +118,7 @@
 
 
 <div id=yun-stylebutton>
-<button type="button" class=yun-shopdetailbutton>샵 더보기</button>
+<button type="button" class=yun-shop-button>샵 더보기</button>
 <button type="button" class=yun-getcouponbutton >쿠폰 받기</button>
 </div>
 
