--- a/beautyChuSpring/src/main/webapp/view/yun-test.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-test.html
@@ -34,7 +34,8 @@ div{
 
 
 		<div id=changediv >
-			<div id=div1>1 <button class='yun-pricelist' type="button">price list</button>
+			<div id=div1>1 
+			<button class='yun-pricelist' type="button">price list</button>
 			</div>
 
 		</div>
