--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
@@ -71,6 +71,7 @@
 	<div id="wrap-chu" class="wrap-chu">
 
  -->
+ 
 		<div id=yun-shopdetailcontainer>
 		
 <!--*****************************************************************************************-->
@@ -99,17 +100,17 @@
 <!--**************************** 버튼 div  **************************************************-->
 			<div id=yun-shopcontent class=yun-shopcontainerdiv>
 				<div id=yun-buttondiv>
-					<img src="../images/yun-shopdetail/back-icon.png"> 
-					<img src="../images/yun-shopdetail/exit-icon.png">
+					<img class=yun-back src="../images/yun-shopdetail/back-icon.png"> 
+					<img class=yun-exit src="../images/yun-shopdetail/exit-icon.png">
 				</div>
 <!--*****************************************************************************************-->
-<!--**************************** 샵 제목 div  **************************************************-->
+<!--**************************** 샵 제목 div  ***********************************************-->
 
 				<div id=yun-shoptitle>
 					<h1>Fabien.H</h1>
 				</div>
 <!--*****************************************************************************************-->
-<!--**************************** 샵 내용 div  **************************************************-->
+<!--**************************** 샵 내용 div **************************************-->
 
 				<div id='yun-shopcontentdetail'>
 <pre>
@@ -120,9 +121,14 @@
 </pre>
 				</div>
 
-<!--*****************************************************************************************-->
-<!--**************************** 샵댓글 슬라이드가 들어가는 div *****************************-->
 
+
+<!--*****************************************************************************************-->
+<!--**************************** 샵댓글 슬라이드가 들어가는 div+ 버튼 div*********************-->
+<div>
+<button type="button" class='yun-shoppricelist'>Price List</button>
+<button type="button" class='get-coupon' >Get Coupon</button>
+</div>
 				<div id=yun-shopcomment class=yun-shopcomment>
 				<img class=yun-shopcomment src="../images/yun-shopdetail/comment.png"/>
 
