--- a/beautyChuSpring/src/main/webapp/view/yun-stylethumbnail.html
+++ b/beautyChuSpring/src/main/webapp/view/yun-stylethumbnail.html
@@ -22,7 +22,6 @@
 .yun-info-bg {
 	width: 1150px;
 	height: 600px;
-	background-color: #DCDBD9;
 	float: left;
 	position: relative;
 	margin: 5px;
@@ -60,23 +59,20 @@
 /* ============================================================== */
 /* yun-test.html css */
 
-/* #changediv {
+ #changediv {
 	position: relative;
-	width: 1000px;
-	height: 500px;
 }
 
-#changediv div{
-	background-size: 1000px 500px;
-	width: 100%;
-	height: 100%;
+.yun-div {
 	position: absolute;
+	background-color: #DCDBD9;
+	
 }
-
-#div1 {
-	background-image: url("../images/yun-test/shopimg.png");
+ 
+#yun-div1 {
+/* 	background-image: url("../images/yun-test/shopimg.png"); */
 	z-index: 1;
-} */
+}
 /* ============================================================== */\
 
 /* ============================================================== */
@@ -226,6 +222,12 @@
 	</header>
 
 
+<!--	<div id=changediv >
+			<div id=div1>1 <button class='yun-pricelist' type="button">price list</button>
+			</div>
+
+		</div> -->
+
 
 	<div id="wrap-chu" class="wrap-chu">
 
@@ -292,7 +294,7 @@
 		$('footer').load('common/footer.html');
 
 		
-		<!--  로드 스크립트!! -->		
+		<!-- 썸네일 로드 스크립트!! -->		
 		var container = $('.yun-container');
 		var elements = container.children();
 		var oldWrapPos = -1;
@@ -326,20 +328,102 @@
 				$('.yun-info-bg').slideUp(function() {
 					$(this).remove();
 				});
-				$('.yun-edge').after('<div class="yun-info-bg"></div>');
-				$('.yun-info-bg').load('yun-shopdetail.html');
+				$('.yun-edge').after('<div id=changediv class="yun-info-bg"><div id=yun-div1 class=yun-div><div></div>');
+				$('#yun-div1').load('templates/yun-styledetail.html');
 				$('.yun-info-bg').slideDown();
 			}
 		});
 		
 		
 
+		<!--썸네일 상세페이지 앞뒤이동 &오버레이 스크립트 -->		
+
+		var pagebtnnum = 2;
 		
 		
+	/* 	$(document).ready(function(){
+			
+			if(pagebtnnum<2){
+				$('.yun-back').css('display','none')
+			}	
+			
+		});
+		 */
 		
+		
+
+		$('div').on("click",".yun-shop-button",function() {
+			$('<div>').fadeIn('fast').appendTo("#changediv").attr({"id":"yun-div"+pagebtnnum,"class":"yun-div"})
+			.css("z-index",pagebtnnum);
+			$('#yun-div'+pagebtnnum).load('templates/yun-shopdetail.html');
+			pagebtnnum++;
+
+		});
+		
+		
+		$('div').on("click",".yun-shoppricelist",function() {
+			$('<div>').fadeIn('fast').appendTo("#changediv").attr({"id":"yun-div"+pagebtnnum,"class":"yun-div"})
+			.css("z-index",pagebtnnum);
+			$('#yun-div'+pagebtnnum).load('templates/yun-shoppricelist.html');
+			pagebtnnum++;
+		});
+
+		
+		$('div').on("click",".yun-back",function(){
+			pagebtnnum--;
+			$('#yun-div'+pagebtnnum).remove();
+			
+		});
+		
+		$('div').on("click",".yun-exit",function(){
+			$('.yun-info-bg').slideUp(function() {
+				$(this).remove();
+			});
+			pagebtnnum =-1;
+		});
+		
+		$('div').on("click",".yun-shopstyle",function() {
+			$('<div>').fadeIn('fast').appendTo("#changediv").attr({"id":"yun-div"+pagebtnnum,"class":"yun-div"})
+			.css("z-index",pagebtnnum);
+			$('#yun-div'+pagebtnnum).load('templates/yun-pricelist.html');
+			pagebtnnum++;
+
+		});
 		
 		
 	</script>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
