--- a/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
@@ -89,8 +89,7 @@
 	margin: 5px;
 	margin-top: 10px;
 	display: none;
-	padding-left: 170px;
-	padding-top: 70px;
+	padding : 40px 60px;
 }
 
 .yun-info-cl {
@@ -141,7 +140,7 @@
 }
 
 .vertical-space {
-	width: 800px;
+	width: 400px;
 	text-align: center;
 	margin-left: 0px;
 }
@@ -282,8 +281,8 @@ height: 1000px;
                     position: absolute;
                     top: 0px;
                     left: 0px;
-                    width: 68px;
-                    height: 68px;
+                    width: 72px;
+                    height: 72px;
                     border: #000 2px solid;
                 }
 
@@ -303,7 +302,17 @@ height: 1000px;
                     height: 70px;
                     border: #fff 1px solid;
                 }
-
+                
+                .kh-celinfo {
+                	width: 500px;
+                	height: 400px;
+                	float: right;
+                	display: inline;
+                }
+                #slider1_container {
+                	display: inline;
+                }
+					
 </style>
 
 </head>
