--- a/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-celebritylist.html
@@ -332,67 +332,67 @@ height: 1000px;
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel1.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel2.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel3.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel4.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel5.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel6.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel7.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel8.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel9.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel1.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 			<div class="yun-box">
 				<div class="kh-cellist">
 					<img class="kh-celimg" src="../images/kh-celebrity/cel1.jpg"/>
-					<div class="kh-basic"><p>JUNO Hair</p></div>
+					<div class="kh-basic"><p>Celebrity</p></div>
 				</div>
 			</div>
 		</div>
@@ -459,7 +459,7 @@ height: 1000px;
 				  $(".kh-detail").load("kh-star.html");
 			  },
 			  function () {
-				  $(this).append($("<div class='kh-basic'><p>JUNO Hair</p></div>"));
+				  $(this).append($("<div class='kh-basic'><p>Celebrity</p></div>"));
 				  $(this).find(".kh-detail").remove();
 			  }
 			);
